# cerngitlab-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  .sanad.toml  CHANGELOG.md  README.md  SKILL.md  dev.md  pyproject.toml
.github/: dependabot.yml  sanad.lock.json
.github/workflows/: ci.yml  release.yml
benchmark/: .env.example  .gitignore  README.md  __init__.py  __main__.py  analyze_results.py  analyzer.py  cli.py  config.py  judge.py  questions-and-answers.md  questions.json  reference_answers.json  run_benchmark.py  runner.py
docs/: CHANGELOG.md  cli-reference.md  dev.md
examples/: oauth_server.py
src/cerngitlab_mcp/: __init__.py  config.py  core.py  exceptions.py  gitlab_client.py  logging.py  models.py  server.py  stack_resolver.py
src/cerngitlab_mcp/auth/: __init__.py  oauth.py  session_store.py
src/cerngitlab_mcp/cli/: README.md  __init__.py  commands.py  main.py
src/cerngitlab_mcp/tools/: __init__.py  analyze_dependencies.py  get_build_config.py  get_ci_config.py  get_file_content.py  get_project_info.py  get_project_readme.py  get_release.py  get_repository_info.py  get_repository_readme.py  get_wiki_pages.py  inspect_project.py  list_project_files.py  list_releases.py  list_repository_files.py  list_tags.py  search_code.py  search_issues.py  search_lhcb_stack.py  search_projects.py  search_repositories.py  utils.py
src/cerngitlab_mcp/transports/: __init__.py  http.py  stdio.py
tests/: conftest.py  test_cli.py  test_connectivity.py  test_core.py  test_integration.py  test_oauth.py  test_phase3_tools.py  test_phase4_tools.py  test_server_modes.py  test_stack_resolver.py  test_tools.py  test_transports.py
